# CleanAnki

./: .gitignore
docs/: ARCHITECTURE.md
rust/tools/make-test-collection/: Cargo.toml
rust/tools/make-test-collection/src/: main.rs
rust/vendor-patches/: anki-26.05.patch  burn-train-0.17.1.patch  regen.sh  systemstat-0.2.7.patch
rust/wasm-bridge/: Cargo.toml  build.rs  build.sh
rust/wasm-bridge/smoke-test/: .gitignore  check_media_test.mjs  import_test.mjs  media_db_persist_test.mjs  media_test.mjs  note_crud_test.mjs  render_test.mjs  repro_wal.mjs  run.sh  smoke_test.mjs  sync_progress_test.mjs
rust/wasm-bridge/src/: main.rs
tools/cors-proxy/: README.md  proxy.mjs
tools/cors-proxy/nginx/: sync-cors-proxy.conf
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: _headers
web/public/wasm/: .gitignore
web/scripts/: sync-wasm-artifacts.sh
web/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
web/src/db/: collection.ts  opfs.ts
web/src/state/: studySession.ts
web/src/ui/: deckGradients.ts
web/src/ui/DecksView/: index.tsx
web/src/ui/HomeView/: index.tsx
web/src/ui/ImportView/: DeckTree.tsx  index.tsx
web/src/ui/ProfileView/: index.tsx
web/src/ui/StatisticsView/: index.tsx
web/src/ui/StudyView/: CardFrame.tsx  index.tsx  media.ts
web/src/ui/SyncSettings/: index.tsx
web/src/ui/charts/: DonutChart.tsx  ForecastBarChart.tsx
web/src/wasm/: backend.ts
web/tests/db/: opfs.test.ts
web/tests/state/: studySession.test.ts
web/tests/ui/: DeckTree.test.ts  charts.test.ts  media.test.ts
